# Calculator

./: CMakeLists.txt  CMakePresets.json  Divide.h  INode.h  Multiply.h  Parser.h  README.md  Splitter.h  Subtract.h  Sum.h  TestCalculator.cpp  Value.h  Variable.h  main.cpp
